objects/PC_Remote_Service_Log__c.object
<CustomObject>
    <description>This object is used to store information received from the web services</description>
    <fields>
        <fullName>PC_Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Callback_Request__c</fullName>
        <description>Used to store the request</description>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Callback_Response__c</fullName>
        <description>Used to store the response</description>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Callback_URL2__c</fullName>
        <description>Used to store the callback URL.</description>
        <inlineHelpText>Used to store the callback URL.</inlineHelpText>
        <label>Endpoint URL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Callback_URL__c</fullName>
        <description>&quot;DEPRECATED BY PRODUCT
Use PC_Callback_URL2__c &quot;</description>
        <label>Endpoint URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Running_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the current user info making an entry</description>
        <label>Running User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Remote_Service_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Service_Name__c</fullName>
        <label>Service Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CMM</fullName>
                </value>
                <value>
                    <fullName>VMI</fullName>
                </value>
                <value>
                    <fullName>Twilio</fullName>
                </value>
                <value>
                    <fullName>Amazon Textract</fullName>
                </value>
                <value>
                    <fullName>Infinitus</fullName>
                </value>
                <value>
                    <fullName>Five9 SMS</fullName>
                </value>
                <value>
                    <fullName>RisRx Pharmacy</fullName>
                </value>
                <value>
                    <fullName>HC Split</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Melissa Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Service_Type__c</fullName>
        <description>Indicates whether the service is inbound or outbound</description>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_StatusCode__c</fullName>
        <description>Used to store the status code</description>
        <label>Status Code</label>
        <type>TextArea</type>
    </fields>
    <label>Remote Service Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PC_Callback_URL2__c</columns>
        <columns>PC_Service_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>PC_Running_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SC-{0000000000}</displayFormat>
        <label>Remote Service Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remote Service Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>